--- a/app/templates/src/sass/utils/_variables.scss
+++ b/app/templates/src/sass/utils/_variables.scss
@@ -45,5 +45,5 @@ $app-default:                 $app-primary-base;
 // Brand danger
 $app-danger:                    $app-red;
 
-//** Font awesome font path
-$fa-font-path:                  "../assets/fonts";
+// Ionicons
+$ionicons-font-path:            "../assets/fonts";
