--- a/app/templates/src/sass/layout/_navbar.scss
+++ b/app/templates/src/sass/layout/_navbar.scss
@@ -1,48 +1,151 @@
 //
-// Header
-// ------------------------------------------
+// Navbar
+// -----------------------------------------
 
-
-.app-header {
-  padding-top: 3rem;
+.app-navbar {
+  @extend .navbar;
   @include media-breakpoint-up(md) {
-      margin-bottom: 1rem;
-      border-bottom: 1px solid $gray-light;
+    background: transparent;
+    border-bottom: 10px solid $gray;
   }
 }
 
-.app-header-content {
-  @include make-container();
-  @include make-container-max-widths();
+//== Navbar header
+//
+//## Default display of global site navigation
+//## Hidden on larger displays
+.app-navbar-header {
+  @include clearfix;
+  display: flex;
+  align-items: center;
+  padding: 0;
+  background: $app-primary;
 }
 
-
-// Header panels
-.app-header-panels {
-    // Fallback for browsers lacking flexbox support
-    @include when-inside('.no-flexbox') {
-        display: table;
-    }
-    @include make-row();
-    flex-wrap: wrap;
+//** Navbar toggle text
+.app-navbar-header-title {
+  flex: 0 0 75%;
 }
 
-//** Base card styles
-.app-header-panel {
-    @include when-inside('.no-flexbox') {
-        display: table-cell;
-    }
-    @include when-inside('.app-header-panels') {
-        @include make-col(12);
+//** Icon bar navigation toggle
+.app-navbar-header-toggle {
+  flex: 0 0 25%;
+  text-align: center;
+}
+
+// Navbar toggle button visible on small displays
+.app-navbar-toggle {
+  width: 100%;
+  border-color: transparent;
+  background: transparent;
+  text-align: right;
+  &:hover,
+  &:focus {
+    background: transparent;
+    border-color: transparent;
+  }
+  .icon-bar {
+    background-color: $gray-lighter;
+  }
+  // Bars
+  .icon-bar {
+    display: block;
+    width: 44px;
+    height: 2px;
+    border-radius: 1px;
+  }
+  .icon-bar + .icon-bar {
+    margin-top: 12px;
+  }
+}
+
+// Navbar toggle button visible on small displays
+// Custom override for
+.navbar-toggleable {
+    &-xs {
         @include media-breakpoint-up(sm) {
-            @include make-col(6);
+            display: block !important;
         }
+    }
+    &-sm {
         @include media-breakpoint-up(md) {
-            @include make-col(6);
+            display: block !important;
+        }
+    }
+    &-md {
+        @include media-breakpoint-up(lg) {
+            display: block !important;
         }
     }
 }
 
-.app-header-brandbar {
-    min-height: 125px;
+// Navbar toggle
+//
+// Custom button for toggling the `.navbar-collapse`, powered by the collapse
+// Bootstrap JavaScript plugin.
+
+.navbar-toggler {
+    padding: .5rem .75rem;
+    font-size: $font-size-lg;
+    line-height: 1;
+    background: none;
+    border: $border-width solid transparent;
+    @include border-radius($btn-border-radius);
+
+    @include hover-focus {
+        text-decoration: none;
+    }
+}
+
+// Unordered list main navigation
+.app-navbar-nav {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 0;
+  padding-left: 0; // Override default ul/ol
+  list-style: none;
+}
+
+//== Navitems
+//
+//## Color coded based on addon classes
+.app-navitem {
+  width: 100%;
+  @include media-breakpoint-up(md) {
+    padding-right: 2px;
+    &:last-child {
+      padding-right: 0;
+    }
+  }
+}
+
+.app-navitem-tab {
+    color: #fff;
+    background-color: $app-primary;
+    font-weight: 400;
+    line-height: 1;
+    text-transform: uppercase;
+    text-align: center;
+    transition: background-color 0.5s ease;
+    &:hover {
+      color: #fff;
+      background-color: darken($app-primary, 6.5%);
+      text-decoration: none;
+    }
+    > span {
+      display: block;
+      margin: 0 auto;
+    }
+    @include media-breakpoint-up(md) {
+        display: flex;
+        align-items: center;
+    }
+    @include when-inside('.active') {
+        color: $app-primary;
+        background-color: transparent;
+        text-decoration: none;
+    }
 }
