--- a/app/templates/includes/base/piwik.html
+++ b/app/templates/includes/base/piwik.html
@@ -7,7 +7,7 @@
   (function() {
     var u="//tkr.ade25.de/";
     _paq.push(['setTrackerUrl', u+'piwik.php']);
-    _paq.push(['setSiteId', 137]);
+    _paq.push(['setSiteId', XXX]);
     var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
     g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
   })();
