--- a/app/templates/includes/base/head.html
+++ b/app/templates/includes/base/head.html
@@ -8,4 +8,5 @@
     {{ page.title }} &middot; Sitename
   {% endif %}
 </title>
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600" rel="stylesheet" />
 <link href="{{ page.base_url }}dist/styles/<%= _.slugify(themeName) %>.min.css" rel="stylesheet">
