--- a/app/templates/includes/layout/header.html
+++ b/app/templates/includes/layout/header.html
@@ -1,10 +1,12 @@
 <header class="app-header" id="app-header" role="banner">
-  <div class="app-header-content app-header-panels">
-    <div class="app-header-panel app-header-brandbar">
-      {% include components/brandpanel.html %}
-    </div>
-    <div class="app-header-panel app-header-actionbar">
-      {% include components/actionbar.html %}
+  <div class="app-header-content">
+    <div class="app-header-panels">
+      <div class="app-header-panel app-header-brandbar">
+        {% include components/brandpanel.html %}
+      </div>
+      <div class="app-header-panel app-header-actionbar">
+        {% include components/actionbar.html %}
+      </div>
     </div>
   </div>
   <div class="app-header-content">
