--- a/app/templates/src/sass/base/_scaffolding.scss
+++ b/app/templates/src/sass/base/_scaffolding.scss
@@ -5,16 +5,8 @@
 
 //** Adjust font weight for initialized webfonts
 body {
-    .wf-active & {
+    @include when-inside('.app-fonts-loaded') {
         font-weight: 300;
-    }
-}
-
-// Set font weights if webfont is active
-.wf-active {
-    b,
-    strong {
-        font-weight: 500;
     }
 }
 
@@ -22,8 +14,8 @@ body {
 b,
 strong {
     font-weight: 700;
-    .wf-active & {
-        font-weight: 500;
+    @include when-inside('.app-fonts-loaded') {
+        font-weight: 400;
     }
 }
 
@@ -34,11 +26,30 @@ a:hover {
 
 // Optional plone settings and adjustments
 // ---------------------------------------
-// Combat plone.app.widget styling (also using bootstrap) and correct
-// display errors caused by grid system inconsistencies
 
 // Combat plone hidden element class via mixin
 .hidden,
 .hiddenStructure {
     visibility: hidden;
+}
+
+// Only display content to screen readers
+//
+// See: http://a11yproject.com/posts/how-to-hide-content/
+
+.hiddenStructure {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    border: 0;
+    color: #fff;
+    background-color: #000;
+}
+.hiddenStructure a {
+    color: #fff;
+    background-color: #000;
 }
