--- a/app/templates/src/sass/components/_cards.scss
+++ b/app/templates/src/sass/components/_cards.scss
@@ -22,6 +22,7 @@
         display: table-cell;
     }
     @include when-inside('.app-cards') {
+        @include make-col-ready();
         @include make-col(12);
         @include media-breakpoint-up(sm) {
             @include make-col(6);
@@ -30,7 +31,6 @@
             @include make-col(4);
         }
     }
-    color: $gray-light;
 }
 
 //== Card layout
