--- a/app/templates/src/sass/themes/_styleguide.scss
+++ b/app/templates/src/sass/themes/_styleguide.scss
@@ -49,7 +49,7 @@
   background-color: $app-primary-base;
 }
 
-//** Header component
+// Header component
 .sg-sidebar-header {
   padding: 0.5rem 1rem;
   margin-bottom: 1rem;
@@ -60,7 +60,7 @@
   font-weight: 400;
 }
 
-//** Subtitle showing styleguide version information
+// Subtitle showing styleguide version information
 .sg-sidebar-subtitle {
   color: $gray-light;
 }
@@ -85,7 +85,7 @@
       &:hover,
       &:focus {
         text-decoration: none;
-        background-color: $nav-link-hover-bg;
+        background-color: $nav-tabs-active-link-bg;
       }
       &.active {
         border-right: 1px solid $gray;
@@ -94,7 +94,7 @@
   }
 }
 
-//** Navlist header (first child li)
+// Navlist header (first child li)
 .sg-sidebar-nav-header {
   // padding-left: $nav-link-padding;
   font-weight: 400;
@@ -134,7 +134,7 @@
 //
 //## Content blocks for each component or feature.
 
-//** Space things out
+// Space things out
 .sg-section {
   margin-bottom: 60px;
 }
